--- a/aplicacion-tareas/package.json
+++ b/aplicacion-tareas/package.json
@@ -2,14 +2,17 @@
   "name": "aplicacion-tareas",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://thedezz360.github.io/react-fazt-aplicacionTareas",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "bootstrap": "^5.3.0-alpha1",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
